kustomizations/prometheus/alertmanager.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: prometheus-system
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9093
      targetPort: web
      protocol: TCP
  selector:
    app.kubernetes.io/name: alertmanager
