kustomizations/prometheus/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: prometheus
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    name: https
    port: 8443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: prometheus-cert
        namespace: prometheus-system
